--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,15 @@ title: "Chris Stoughton" # the name of your site, e.g. ACME Corp.
 collections:
   presentations:
     output: true
-  
+
+
+lsi: false
+safe: true
+source: [your repo's top level directory]
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge  
